[package]
authors = ["Kurtis Dinelle <kurtisdinelle@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "leds-of-life"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"
defmt = "0.3.7"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103"] }

